--- a/css/supp.css
+++ b/css/supp.css
@@ -126,6 +126,23 @@ div#legend {
   color: #ffffff;
 }
 
+.theta-band {
+  flex: 0 1 28px;
+  height: 28px;
+  display: inline-block;
+  text-align: center;
+  padding-top: 7px;
+  font-size: 10px;
+  color: #ffffff;
+}
+
+.theta-band::before {
+  content: '\u03B8:';
+  margin-right: 10px;
+  display: inline-block;
+  text-align: center;
+}
+
 #title-link {
   color:inherit;
 }
