--- a/css/supp.css
+++ b/css/supp.css
@@ -137,7 +137,7 @@ div#legend {
 }
 
 .theta-band::before {
-  content: '\u03B8:';
+  content: '';
   margin-right: 10px;
   display: inline-block;
   text-align: center;
