--- a/css/supp.css
+++ b/css/supp.css
@@ -137,7 +137,7 @@ div#legend {
 }
 
 .fband::before {
-  content: '&#03B8;: ';
+  content: 'θ: ';
   margin-right: 10px;
   display: inline-block;
   text-align: center;
