--- a/css/supp.css
+++ b/css/supp.css
@@ -156,10 +156,10 @@ div#legend {
 }*/
 
 .button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 14px 40px;
+  background-color: white; /* Green */
+  border: 2px solid #4CAF50;
+  color: #4CAF50;
+  padding: 12px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
