--- a/css/supp.css
+++ b/css/supp.css
@@ -77,6 +77,13 @@ div#legend {
   align-items: left;
 }
 
+#voiceid-body {
+  background-image: url('https://www.baihan.nyc/viz/VoiceID/voiceID_logo.pdf');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: top right; 
+}
+
 .chroma-band {
   flex: 0 1 28px;
   height: 28px;
