[FEAT] add logo

--- a/css/supp.css
+++ b/css/supp.css
@@ -78,7 +78,7 @@ div#legend {
 }
 
 #voiceid-body {
-  background-image: url('https://www.baihan.nyc/viz/VoiceID/voiceID_logo.pdf');
+  background-image: url('https://www.baihan.nyc/viz/VoiceID/voiceID_logo.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: top right; 
