[DBG] add voiceid log

--- a/css/supp.css
+++ b/css/supp.css
@@ -78,9 +78,9 @@ div#legend {
 }
 
 #voiceid-body {
-  background-image: url('https://www.baihan.nyc/viz/VoiceID/voiceID_logo.png');
+  background-image: url('https://www.baihan.nyc/viz/VoiceID/voiceID_logo.pdf');
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   background-position: top right; 
 }
 
