--- a/css/resume.css
+++ b/css/resume.css
@@ -690,57 +690,30 @@ span {
     padding-bottom: 0.5em;
 }
 
-.card {
-    position: relative;
-    padding: 42px 32px;
-    clip-path: circle(5% at 95% 11%);
-    transition: all ease-in-out 0.3s;
-    background-color: #fff;
-}
-.card__infoicon {
-    position: absolute;
-    top: 10px;
-    right: 28px;
-    font-size: 1.4em;
-    color: #000;
-    transition: ease-out 0.3s;
-}
-.card__title {
-    margin: 0;
-    font-size: 3em;
-    line-height: 1.8;
-}
-.card__description {
-    margin: 0;
-    font-size: 1.1em;
-    line-height: 1.6;
-}
-.card__credits {
-    margin: 0;
-    padding: 4px 0;
-    font-size: 1.1em;
-}
-.card__reference {
-    display: inline-block;
-    border-bottom: 1px solid transparent;
-    color: #09f;
-    text-decoration: none;
-    transition: ease-in 0.3s;
-}
-.card__reference:hover {
-    border-bottom-color: #09f;
-}
-.card:hover, .card:focus {
-    clip-path: circle(75%);
+.moreinfo {
+    height: 0;
+    width: 0;
+    z-index: 1;
+    background-color: rgb(119,114,114);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(0%, -50%);
     border-radius: 20px;
-    box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.12), 0px 3px 18px rgba(0, 0, 0, 0.08);
-    background: #fff;
-    outline: none;
+    border: 2px solid white; /* Green */
+
 }
-.card:hover .card__infoicon, .card:focus .card__infoicon {
-    opacity: 0;
-}
-.card:focus {
-    box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.12), 0px 3px 18px rgba(0, 0, 0, 0.08), 0px 0px 0px 4px rgba(0, 0, 0, 0.2);
-}
+
+.moreinfo .text {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    display: block;
+    transition: 0.3s;
 }
