[FEAT] disable text-transform

--- a/css/resume.css
+++ b/css/resume.css
@@ -696,20 +696,22 @@ span {
     z-index: 1;
     background-color: rgb(119,114,114);
     overflow-x: hidden;
-    transition: 0.5s;
+    overflow-y: hidden;
+    transition: 0.5s ease;
     padding-top: 0;
     margin-left: auto;
     margin-right: auto;
     position:absolute;
     top:50%;
     left:50%;
-    transform:translate(0%, -50%);
+    transform:translate(0%, -67%);
     border-radius: 20px;
     border: 2px solid white; /* Green */
 
 }
 
-.moreinfo .text {
+.infotext {
+    text-transform: none;
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
