--- a/css/resume.css
+++ b/css/resume.css
@@ -701,10 +701,10 @@ span {
     padding-top: 0;
     margin-left: auto;
     margin-right: auto;
-    position:absolute;
+    position:relative;
     top:50%;
     left:50%;
-    transform:translate(0%, -67%);
+    transform:translate(-50%, -50%);
     border-radius: 20px;
     border: 2px solid white; /* Green */
 
