--- a/css/resume.css
+++ b/css/resume.css
@@ -701,7 +701,7 @@ span {
     padding-top: 0;
     margin-left: auto;
     margin-right: auto;
-    position:relative;
+    position:fixed;
     top:50%;
     left:50%;
     transform:translate(-50%, -50%);
