--- a/css/resume.css
+++ b/css/resume.css
@@ -690,7 +690,7 @@ span {
     padding-bottom: 0.5em;
 }
 
-.moreinfo {
+.infowrapper {
     height: 0;
     width: 0;
     z-index: 1;
@@ -710,7 +710,7 @@ span {
 
 }
 
-.infotext {
+.infocontent {
     text-transform: none;
     padding: 8px 8px 8px 32px;
     text-decoration: none;
