--- a/css/resume.css
+++ b/css/resume.css
@@ -712,11 +712,11 @@ span {
 
 .infocontent {
     text-transform: none;
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
+    /*padding: 8px 8px 8px 32px;*/
+    /*text-decoration: none;*/
+    /*font-size: 25px;*/
     color: white;
-    display: block;
-    transition: 0.3s;
+    /*display: block;*/
+    /*transition: 0.3s;*/
     float: left;
 }
