--- a/css/resume.css
+++ b/css/resume.css
@@ -33,7 +33,7 @@ footer {
 }
 
 .imgcolumn {
-    float: center;
+    float: left;
     width: 20.00%;
     padding: 5px;
 }
@@ -719,4 +719,16 @@ span {
     /*display: block;*/
     /*transition: 0.3s;*/
     float: left;
+}
+
+.infoimgcolumn {
+    float: left;
+    width: 40.00%;
+    padding: 5px;
+}
+
+.infotextcolumn {
+    float: left;
+    width: 59.00%;
+    padding: 5px;
 }
