--- a/css/resume.css
+++ b/css/resume.css
@@ -707,6 +707,7 @@ span {
     transform:translate(-50%, -50%);
     border-radius: 20px;
     border: 2px solid white;
+    opacity: 0.7;
 }
 
 .infocontent {
