[FEAT] align text

--- a/css/resume.css
+++ b/css/resume.css
@@ -727,6 +727,10 @@ span {
     padding: 5px;
 }
 
+.inforow {
+    text-align: center;
+}
+
 .infotextcolumn {
     float: left;
     width: 59.00%;
