--- a/css/resume.css
+++ b/css/resume.css
@@ -707,7 +707,7 @@ span {
     transform:translate(-50%, -50%);
     border-radius: 20px;
     border: 2px solid white;
-    opacity: 0.7;
+    opacity: 0.9;
 }
 
 .infocontent {
@@ -729,6 +729,13 @@ span {
 
 .inforow {
     text-align: center;
+}
+
+.inforow::after {
+    content: "";
+    clear: both;
+    display: table;
+    padding: 5px;
 }
 
 .infotextcolumn {
