[DBG] bump info font size

--- a/css/resume.css
+++ b/css/resume.css
@@ -714,7 +714,7 @@ span {
     text-transform: none;
     padding: 10px 10px 10px 10px;
     /*text-decoration: none;*/
-    /*font-size: 25px;*/
+    font-size: 1.5rem;
     color: white;
     /*display: block;*/
     /*transition: 0.3s;*/
