[FEAT] try set all link format with css

--- a/css/resume.css
+++ b/css/resume.css
@@ -468,12 +468,24 @@ section.resume-section .resume-item .resume-date {
 }
 
 a {
-    color: #272727;
+    /*color: #272727;*/
+    color: #268fd6;
 }
 
 a:hover,
 a:focus,
 a:active {
+    /*color: #747474;*/
+    color: #268fd6;
+}
+
+.nav-link {
+    color: #272727;
+}
+
+.nav-link:hover,
+.nav-link:focus,
+.nav-link:active {
     color: #747474;
 }
 
