[DBG] fix border color

--- a/css/resume.css
+++ b/css/resume.css
@@ -124,7 +124,7 @@ footer {
 .handwritten {
     color: #BD5D38;
     font-size: 1.5rem; 
-    font-family: 'Rancho', cursive;
+    /*font-family: 'Rancho', cursive;*/
 }
 
 .field-img{
