--- a/css/resume.css
+++ b/css/resume.css
@@ -123,7 +123,7 @@ footer {
 
 .handwritten {
     color: #BD5D38;
-    font-size: 1.5rem; 
+    /*font-size: 1.5rem; */
     /*font-family: 'Rancho', cursive;*/
 }
 
