--- a/css/resume.css
+++ b/css/resume.css
@@ -40,7 +40,7 @@ footer {
 
 .textcolumn {
     float: left;
-    width: 79.00%;
+    width: 79%;
     padding: 5px;
 }
 
@@ -73,8 +73,11 @@ footer {
     }
     .imgcolumn {
         display: none;
-        width: 0em;
+        width: 0%;
         padding: 0px;
+    }
+    .textcolumn {
+        width:95%;
     }
     .bottom-some {
         margin-bottom: 0em;
