[FEAT] set default abstract to be on

--- a/css/resume.css
+++ b/css/resume.css
@@ -275,7 +275,8 @@ footer {
 }
 
 body {
-    font-family: 'Ubuntu', serif;
+    /* font-family: 'Ubuntu', serif; */
+    font-family: 'Noto Sans JP';
     padding-top: 1em;
     color: #868e96;
     padding-left: 1em;
@@ -464,7 +465,8 @@ section.resume-section .resume-item .resume-date {
 }
 
 .text-primary {
-    /*font-family: 'Ubuntu', serif;*/
+    /* font-family: 'Ubuntu', serif; */
+    font-family: 'Noto Sans JP';
     font-size: 1.1rem;
 
     color: #272727 !important;
@@ -733,7 +735,7 @@ span {
 
 .abstract {
   padding: 0 18px;
-  max-height: 0;
+  max-height: 500px;
   overflow: hidden;
   color: #414950;
   transition: max-height 0.2s ease-out;
@@ -742,7 +744,8 @@ span {
 }
 
 .field-title {
-    font-family: 'Ubuntu', serif;
+    /* font-family: 'Ubuntu', serif; */
+    font-family: 'Noto Sans JP';
     text-transform:none;
     padding-top: 1em;
     padding-bottom: 0.5em;
