--- a/css/resume.css
+++ b/css/resume.css
@@ -735,7 +735,7 @@ span {
 
 .abstract {
   padding: 0 18px;
-  max-height: 100%;
+  max-height: 0;
   overflow: hidden;
   color: #414950;
   transition: max-height 0.2s ease-out;
