--- a/css/resume.css
+++ b/css/resume.css
@@ -33,9 +33,12 @@ footer {
 }
 
 .imgcolumn {
-    float: left;
+    /* float: left;
     width: 20.00%;
-    padding: 5px;
+    padding: 5px; */
+    display: none;
+    width: 0;
+    padding: 0;
 }
 
 .textcolumn {
