--- a/css/resume.css
+++ b/css/resume.css
@@ -33,9 +33,9 @@ footer {
 }
 
 .imgcolumn {
-    display: inline;
+    float: left;
     width: 15%;
-    padding: 5px;
+    padding: 2%;
 }
 
 .textcolumn {
