--- a/css/resume.css
+++ b/css/resume.css
@@ -40,8 +40,8 @@ footer {
 
 .textcolumn {
     float: left;
-    width: 95%;
-    padding: 5px;
+    width: 80%;
+    padding: 2%;
 }
 
 .contactcolumn {
